# embedded-rust-examples

./: README.md
nrf9160-dk/application/: Cargo.toml  memory.x
nrf9160-dk/bootloader/: Cargo.toml  memory.x
