[package]
edition = "2021"
name = "embassy-boot-nrf-examples"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.6.1" }
embassy-executor = { version = "0.6.1", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "integrated-timers", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.3.2", features = [] }
embassy-nrf = { version = "0.2.0", features = ["time-driver-rtc1", "gpiote", "nrf9160-s"] }
embassy-boot = { version = "0.3.0" }
embassy-boot-nrf = { version = "0.3.0" }
embassy-embedded-hal = { version = "0.2.0" }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-reset = { version = "0.1.1" }
embedded-hal = { version = "0.2.6" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

[features]
ed25519-dalek = ["embassy-boot/ed25519-dalek"]
ed25519-salty = ["embassy-boot/ed25519-salty"]
skip-include = []
defmt = [
      "dep:defmt",
      "dep:defmt-rtt",
      "embassy-nrf/defmt",
      "embassy-boot-nrf/defmt",
      "embassy-sync/defmt",
]
